--- a/backend/backend.Api/appsettings.json
+++ b/backend/backend.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+"ConnectionStrings": {
+      "dbContext": "server=119.23.34.239;port=3306;database=mps;uid=root;password=root;Charset=uft8",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
