[Add] 添加User对应功能操作.

--- a/backend/backend.Api/backend.Api.csproj
+++ b/backend/backend.Api/backend.Api.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\backend.Core\backend.Core.csproj" />
+    <ProjectReference Include="..\backend.Infrastructure\backend.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
