--- a/backend/backend.Api/appsettings.json
+++ b/backend/backend.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
-"ConnectionStrings": {
-      "dbContext": "server=119.23.34.239;port=3306;database=mps;uid=****;password=****;Charset=uft8",
+  "ConnectionStrings": {
+    "dbContext": "server=119.23.34.239;port=3306;database=mps;uid=root;password=root;Charset=uft8",
   },
   "Logging": {
     "LogLevel": {
